# C2MEngine

./: CMakeLists.txt
shaders/: fbTexture.vert  framebuffer.vert  polygon.vert  singleColor.frag  texture.frag  textureAlpha.vert
src/: CMakeLists.txt  main.cpp  root.hpp
src/client/: CMakeLists.txt  engine.hpp  types.hpp
src/client/gl/: CMakeLists.txt  camera.hpp
src/client/gl/drawing/: drawable.hpp  quad.hpp  sprite.hpp  triangle.hpp
src/client/gl/shaders/: shader.hpp  shaderManager.hpp
src/client/gl/utils/: texture.hpp
src/client/input/: keyboardMouse.hpp
src/common/: object.hpp  types.hpp
